# 2-compartment-poromechanical-and-LDF-measurement

./: .gitignore  README.md  gitignore
1D_Column/: main_column_2_bi.py
1D_Column/post-treatment/: Results_2_comp_1.csv  Results_2_comp_10.csv  Results_2_comp_5.csv  Results_2_comp_50.csv  Results_2_comp_epsilon0595.csv  Results_2_comp_mono_05.csv  plot.py
3D_Phalanx/Finite_Element_Files/: New_geom_finger_gmsh.py  Slurm_singularity_fenicsx_0_9_0.sh  main_finger.py  slurm_ID_63_local_refine-184428.out  variational_forms.py
3D_Phalanx/Mesh/: New_geom_finger_gmsh.py  (+1 more)
Experimental_Data/: 009_PREVAIL_LBM_009.xlsx  026_PREVAIL_LBM_026.xlsx  028_PREVAIL_LBM_028.xlsx  029_PREVAIL_LBM_029.xlsx  030_PREVAIL_LBM_030.xlsx  031_PREVAIL_LBM_031.xlsx  032_PREVAIL_LBM_032.xlsx  033_PREVAIL_LBM_033.xlsx  034_PREVAIL_LBM_034.xlsx  035_PREVAIL_LBM_035.xlsx  JOL_PREVAIL_LBM_008.xlsx  LDF_post_treatment.py  MDI_PREVAIL_LBM_026.xlsx  Mesh_error.xlsx
Parallel_Install_FEniCSx/: INSTALL.md  README.md
Theoretical_developments_and_service_files/: README.md
Theoretical_developments_and_service_files/0_Service_files/porous_fenicsx/: README.md  pyproject.toml  setup.py
Theoretical_developments_and_service_files/0_Service_files/porous_fenicsx/porous_fenicsx/: __init__.py  constitutive_laws.py  functions.py  variational_forms.py  variational_forms_Neo_Hooke.py  variational_forms_TW.py
Theoretical_developments_and_service_files/0_Service_files/porous_fenicsx/porous_fenicsx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Try_parallel_compute/: Slurm_spack_fenicsx_0_9_0.sh  installation.md
(+131 files in other folders)
