[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "porous_fenicsx"
version = "0.9.0"
authors = [
  { name="Thomas Lavigne", email="lavignethomas@hotmail.fr" },
]
description = "Porous media mechanics within FEniCSx developed during Thomas Lavigne P.h.D"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "gmsh",
    "h5py",
    "pyvista",
    "imageio",
    "matplotlib",
    "numpy"
]



[project.optional-dependencies]
# Dev dependencies.
dev = [
    "csv>=3.13.1",
    "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/Th0masLavigne/2-compartment-poromechanical-and-LDF-measurement.git"
Issues = "https://github.com/Th0masLavigne/2-compartment-poromechanical-and-LDF-measurement.git/issues"

